# bluezero-camera-opencv

./: .gitignore
c++/: CMakeLists.txt  camera-node.cpp  gui-node.cpp
python/: camera-node.py  gui-node.py
